# xlib_hotkeys

./: LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: stale.yml
xlib_hotkeys/: __init__.py  __main__.py
